--- a/demoapp/demoapp/Main.storyboard
+++ b/demoapp/demoapp/Main.storyboard
@@ -119,6 +119,26 @@
                                             <segue destination="9Jh-bq-fKs" kind="show" id="YjI-Ae-yje"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="6b6-dZ-3Qm" rowHeight="55" style="IBUITableViewCellStyleDefault" id="bX6-L4-s5Q">
+                                        <rect key="frame" x="20" y="293" width="374" height="55"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bX6-L4-s5Q" id="P1X-Qe-79w">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="55"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="STRP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6b6-dZ-3Qm">
+                                                    <rect key="frame" x="20" y="0.0" width="315" height="55"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="9w6-Zd-AeA" kind="show" id="wKr-jd-PHw"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -343,6 +363,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tze-B5-UQI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4074" y="121"/>
+        </scene>
+        <!--STRP-->
+        <scene sceneID="Ov9-8W-bOX">
+            <objects>
+                <viewController id="9w6-Zd-AeA" customClass="STRP" customModule="demoapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dYp-3A-TjW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Sr6-5O-R2S"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="4bl-X1-b0S"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tSH-ni-5HH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4938" y="109"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ClL-t9-spV">
